# Email_bot

./: .env  .env.odt  100 investors.csv  Book1.csv  CONCISE_EMAIL_GUIDE.md  CUSTOM_TEMPLATE_GUIDE.md  QUICK_START.md  README.md  README_V2.md  START_HERE.md  app.py  app_v2.py  companies.csv  credentials.json  recipients.csv  requirements.txt  setup.cfg  token.json  vc's details 20.csv  vc_s details 20.csv
google_api_testing/: check_vision_models.py  interactive_ai_test.py  list_models.py  simple_ai_test.py  test_google_api.py
src/: database.py  email_full_integ.py  web_app.py
src/ai/: document_parser.py  groq_helper.py
src/gmail/: __init__.py  auth.py  labels.py  mail.py
src/templates/: cold_email_preview.html  index.html  preview.html  read.html  reply.html  send.html
src/utils/: helpers.py
src_v2/templates/: analytics-v3.html  analytics.html  campaign-v3.html  campaign.html  campaign.html.backup  inbox-v3.html  inbox.html  layout-v3.html  layout.html
tests/: test_email_integ.py
uploads/: 123.csv  13.11_vc_data.csv  13.11_vc_data.xlsx  13.11_vc_data1.xlsx  15_real_estate.csv  23inves.csv  35_investors.csv  another_investor.csv  company_search_0fc4b311-5b63-495b-aee3-492ec89d1eee.csv  company_search_26ed42c3-1127-4b8d-93e3-09ac3b0ea9cc.csv  company_search_54f79f32-e5aa-4f5a-8f7a-a97d1e1fb370.csv  company_search_f0ab306c-fa1c-4dcb-b909-4f45a7bc1223.csv  emails.csv  final_new_35_investors_strict_partial.csv  new_batch_after_removal.csv  sample.csv  test_csv_structure.csv
uploads/documents/: MEMO.docx  anonymous_-_Durga_AI_Investor_Memo_v3.docx
(+4 files in other folders)
