[metadata]
name = gmail-python-app
version = 0.1.0
description = A Python application for interacting with the Gmail API.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/gmail-python-app
license = MIT

[options]
packages = find:
install_requires =
    google-auth
    google-auth-oauthlib
    google-api-python-client
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*